Hopefully Fixed Bottom of Screen Overflowing

--- a/discorddark.css
+++ b/discorddark.css
@@ -839,7 +839,7 @@ button.bd-addon-button:not(.bd-link):not(.bd-button-danger):hover, .bd-view-butt
 
 .base-2jDfDU {
   top: -8px;
-  height: 102%;
+  height: 101vh;
 }
 
 .platform-win .closeButton-30b1gR {
